# AMLS

./: .env  .env.example  .gitignore  README.md  Thesis_API.postman_collection.json  Thesis_API_Environment.postman_environment.json  Thesis_Admin_API.postman_collection.json  Thesis_Admin_Environment.postman_environment.json  docker-compose.yml  entrypoint
backend/: .conf  .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml
backend/certs/: jwt-private.pem  jwt-public.pem
backend/scripts/: validate_latex.mjs
backend/src/: main.py
backend/src/bootstrap/: __init__.py  demo_course_bootstrap.py  lecture_seed_pack_v1.json
backend/src/config/: __init__.py  app_config.py  business_config.py  config_section.py  infra_config.py  loader.py  manager.py  validation.py
backend/src/core/: clients.py  config.py  logging.py  logging_runtime.py  paths.py  utils.py
backend/src/db/: __init__.py  catalog_data.py  database.py  enums.py  models.py  problem_type_tree.py  reference_dataset.py  reference_problem_bank.py  reference_sync.py  seed.py  transaction_manager.py
backend/src/fast_api/: __init__.py  dependencies.py  fastapi_server.py
backend/src/fast_api/routers/: __init__.py  auth_router.py  course_graph_router.py  course_router.py  difficulty_router.py  entrance_test_router.py  health_router.py  lecture_router.py  mastery_router.py  problem_router.py  problem_type_router.py  skill_router.py  storage_router.py  test_router.py  topic_router.py  user_router.py
backend/src/latex/: __init__.py  mathjax_validator.py  validate_latex.mjs
backend/src/math_models/: __init__.py  mastery.py  mastery_orchestrator.py
backend/src/math_models/entrance_assessment/: __init__.py  builders.py  engine.py  evidence_update.py  forest_artifact.py  fringes.py  graph_artifact.py  probability.py  runtime_engine.py  selection.py  state_scoring.py  state_space.py  stopping.py  support_profile.py  temperature.py  types.py
backend/src/math_models/graph_assessment/: __init__.py  builders.py  runtime_engine.py
backend/src/migrations/: env.py  script.py.mako
backend/src/migrations/versions/: 83b82812aa37_initial_schema.py  phase0_initial_schema.py  phase10_test_attempt_timing.py  phase1_entrance_test_session_refactor.py  phase2_entrance_test_result_persistence.py  phase3_entrance_test_compiled_structure.py  phase4_config_backed_difficulty.py  phase5_entrance_assessment_bayes_engine.py  phase6_entrance_projection_confidence.py  phase6_projection_confidence.py  phase7_course_dag_assessment.py  phase9_final_diploma_features.py
backend/src/models/alchemy/: __init__.py  common.py  course.py  course_graph.py  difficulty.py  entrance_test.py  entrance_test_structure.py  problem.py  problem_type.py  response.py  skill.py  test.py  topic.py  user.py
backend/src/models/pydantic/: __init__.py  assessment_runtime.py  auth.py  common.py  course.py  difficulty.py  entrance_assessment.py  entrance_test.py  graph_assessment.py  lecture.py  llm.py  mastery.py  problem.py  problem_type.py  response.py  review_generation.py  skill.py  storage.py  test.py  topic.py  user.py
backend/src/pydantic_schemas/: __init__.py  auth.py  common.py  difficulty.py  internal.py  problem.py  skill.py  storage.py  topic.py  user.py
backend/src/s3/: __init__.py  s3_connector.py
backend/src/services/: llm_client.py  lms_studio_runtime_client.py  problem_service.py  storage_service.py
backend/src/services/auth/: __init__.py  auth_service.py  passwords.py  sessions_manager.py
backend/src/services/catalog/: __init__.py  difficulty_service.py  problem_type_service.py  skill_service.py  topic_service.py
backend/src/services/course/: __init__.py  course_service.py
backend/src/services/course_graph/: __init__.py  course_graph_service.py
backend/src/services/jwt/: __init__.py  (+1 more)
backend/src/storage/: __init__.py  image_uploader.py  storage_manager.py
backend/src/transaction_manager/: __init__.py  transaction_manager.py
backend/src/valkey/: __init__.py  entrance_test_runtime.py  mastery_cache.py  valkey_client.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_course_graph_flow.py  test_entrance_assessment_math.py  test_entrance_test_services.py  test_final_diploma_api.py  test_llm_client.py  test_lms_studio_runtime_client.py  test_logging.py  test_reference_catalog.py  test_review_generation_service.py
(+94 files in other folders)
