[project]
name = "amls_backend"
version = "0.1.0"
requires-python = "==3.14.0"
dependencies = [
    "aiobotocore==2.15.2",
    "alembic==1.16.4",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "botocore==1.35.36",
    "colorama==0.4.6",
    "email-validator==2.2.0",
    "fastapi==0.116.0",
    "greenlet==3.3.2",
    "loguru==0.7.3",
    "psycopg[binary]==3.3.3",
    "pydantic==2.12.5",
    "python-dotenv==1.1.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.41",
    "uvicorn[standard]==0.35.0",
    "valkey==6.1.1",
]


[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "mypy==1.17.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "ruff==0.12.12",
    "types-aiobotocore[s3]==2.15.2",
]


[tool.ruff]
target-version = "py314"
line-length = 100
preview = true


[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "N", "TCH", "UP", "W"]
ignore = ["ANN401", "TC001", "TC003", "W293"]
unfixable = ["ANN"]


[tool.mypy]
python_version = "3.14"
files = ["src", "tests", "main.py"]
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]


[[tool.mypy.overrides]]
module = [
    "colorama",
    "jose",
    "jose.exceptions",
    "loguru",
    "valkey",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"


[jwt]
private_key = "certs/jwt-private.pem"
public_key = "certs/jwt-public.pem"


[db]
echo = false
pool_size = 10
max_overflow = 20
